# tbills-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: deploy_app.yml  github_pages.yml  scrape_data.yml  scrape_deploy_app.yml  terraform_s3_table_bucket.yml  terraform_validate_plan_apply.yml
app/: app.py  plot_utils.py
app/data/: break_even_yields.csv  daily_yields.csv
docs/: app.json  pull_request_template.md
docs/shinylive/pyodide/: asttokens-2.4.1-py2.py3-none-any.whl  decorator-5.1.1-py3-none-any.whl  executing-2.0.1-py2.py3-none-any.whl  ipython-8.23.0-py3-none-any.whl  matplotlib_inline-0.1.7-py3-none-any.whl  prompt_toolkit-3.0.43-py3-none-any.whl  pure_eval-0.2.3-py3-none-any.whl  python_dateutil-2.9.0.post0-py2.py3-none-any.whl  shinywidgets-0.5.2-py3-none-any.whl  six-1.16.0-py2.py3-none-any.whl  sqlite3-1.0.0-py2.py3-none-any.whl  stack_data-0.6.3-py3-none-any.whl  traitlets-5.14.3-py3-none-any.whl  wcwidth-0.2.13-py2.py3-none-any.whl
notebooks/: break_even_cey.ipynb  visualizations.ipynb
scripts/: grant_s3tables_permissions.sh  integrate_s3tables_lake_formation.sh
src/: tbills.py
terraform/docs/: github_action_oidc.md  s3_table_bucket.md
terraform/docs/diagrams/: architecture.excalidraw
terraform/github_action_oidc/: backend.hcl  iam.tf  outputs.tf  variables.tf  variables.tfvars.example
terraform/s3_table/: main.tf  variables.tf  variables.tfvars.example
terraform/s3_table_bucket/: .terraform.lock.hcl  backend.hcl  main.tf  table_bucket.tf  variables.tf  variables.tfvars.example
